@@ -134,6 +134,9 @@ allprojects {
       '-Xlint:static',
       '-Werror',
     ]
+    options.forkOptions.jvmArgs += [
+        '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+    ]
 
     options.errorprone {
       disableWarningsInGeneratedCode
@@ -198,7 +201,7 @@ allprojects {
       'root.log.level',
       'evm.log.level'
     ]
-    testLogging.showStandardStreams = true
+    testLogging.showStandardStreams = project.hasProperty("showOutput") ? project.property("showOutput") : false
     for (String name : toImport) {
       if (System.getProperty(name) != null) {
         systemProperty name, System.getProperty(name)
@@ -218,7 +221,8 @@ allprojects {
   }
 }
 
-def refTestVersion = 'v1.0.0-rc.0'
+// Note: v1.0.0 tests were republished to fix an initial error. This comment forces cache update
+def refTestVersion = 'v1.0.0'
 def refTestBaseUrl = 'https://github.com/ethereum/eth2.0-spec-tests/releases/download'
 def refTestDownloadDir = "${buildDir}/refTests/${refTestVersion}"
 def refTestExpandDir = "${project.rootDir}/eth-reference-tests/src/referenceTest/resources/eth2.0-spec-tests/"
